# homesrvctl

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  FILE_MAP.md  PROJECT_CONTEXT.md  README.md  RELEASING.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  python-checks.yml  release.yml
homectl/: __init__.py  cloudflare.py  cloudflared.py  cloudflared_service.py  config.py  main.py  models.py  shell.py  templates.py  utils.py
homectl/commands/: __init__.py  app_cmd.py  cloudflared_cmd.py  config_cmd.py  deploy_cmd.py  domain_cmd.py  site_cmd.py  validate_cmd.py
homectl/templates/app/: docker-compose.yml.j2  env.example.j2  node-docker-compose.yml.j2
homectl/templates/app/node/: docker-compose.yml.j2  package.json.j2
homectl/templates/app/python/: Dockerfile.j2  README.md.j2  docker-compose.yml.j2  env.example.j2
homesrvctl/: __init__.py  adoption.py  bootstrap.py  cloudflare.py  cloudflared.py  cloudflared_service.py  config.py  main.py  models.py  shell.py  template_catalog.py  templates.py
homesrvctl/commands/: __init__.py  app_cmd.py  bootstrap_cmd.py  cloudflared_cmd.py  config_cmd.py  deploy_cmd.py  domain_cmd.py  site_cmd.py  tui_cmd.py  validate_cmd.py
homesrvctl/templates/app/jekyll/: README.md.j2
homesrvctl/templates/app/node/: Dockerfile.j2  README.md.j2  docker-compose.yml.j2  env.example.j2
homesrvctl/templates/app/python/: Dockerfile.j2  README.md.j2  docker-compose.yml.j2  env.example.j2  requirements.txt.j2
homesrvctl/templates/app/rust-react-postgres/: README.md.j2  api.Cargo.toml.j2  api.Dockerfile.j2  api.migrations.0001_initial.sql.j2  api.src.main.rs.j2  docker-compose.yml.j2  dockerignore.j2  env.example.j2  frontend.Dockerfile.j2  frontend.index.html.j2  frontend.nginx.conf.j2  frontend.package.json.j2  frontend.src.App.jsx.j2  frontend.src.styles.css.j2
homesrvctl/templates/app/static-api/: README.md.j2  (+1 more)
homesrvctl/templates/static/: docker-compose.yml.j2  index.html.j2
homesrvctl/tui/: app.py  dashboard.py  data.py  prompts.py
templates/app/: node.README.md.j2
templates/static/: index.html.j2
tests/: test_bootstrap.py  test_cli_scaffold.py  test_cloudflare.py  test_cloudflared_service.py  test_config.py  test_packaging.py  test_tui.py  test_utils.py  test_validate.py
(+9 files in other folders)
