[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homesrvctl"
version = "0.4.0"
description = "CLI for managing a home-server hosting platform backed by Cloudflare Tunnel, Traefik, and Docker Compose."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  {name = "David Green"},
]
keywords = ["cloudflare", "tunnel", "traefik", "docker", "homelab", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: Proxy Servers",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
]
dependencies = [
  "Jinja2>=3.1.0",
  "PyYAML>=6.0",
  "textual>=8,<9",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
]

[project.scripts]
homesrvctl = "homesrvctl.main:run"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["homesrvctl*"]

[tool.setuptools.package-data]
homesrvctl = [
  "py.typed",
  "templates/**/*.j2",
  "templates/**/*.md.j2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
